# pxstatspy

./: .gitignore  DEVDOCS.md  MANIFEST.in  NEWS.md  README.md  pyproject.toml  setup.py
LICENSES/: README.md
pxstatspy/: __init__.py  pxapi.py
tests/: conftest.py  test_pxapi.py
tutorials/: PxStatsPy - Get started.ipynb
